--- a/index.html
+++ b/index.html
@@ -35,11 +35,18 @@
 
     <footer>
         <div class="signature">
-            <p>Naomi Mowbray</p>
+            Naomi Mowbray
         </div>
         <div class="webdev">
             <p>WEB DEVELOPER + CODER</p>
         </div>
+
+        <!-- OR: -->
+        <!-- <div class="signature">
+            <p>Naomi Mowbray</p>
+        <p class="webdev">
+            WEB DEVELOPER + CODER</p>
+        </div> -->
 
         <div class="socials">
             <a href="https://www.instagram.com/captainaomi" target="_blank">
