--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naomi Mowbray</title>
-    <link rel="stylesheet" href="./styling/pages/index.css"/>
     <link rel="stylesheet" href="./styling/pages/home.css"/>
 
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
 
     <!-- social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,7 +20,9 @@
 
 <body>
     <header>
-        <h1 class="name">Naomi Mowbray</h1>
+        <h1 class="name">
+            <a href="./index.html">Naomi Mowbray</a>
+        </h1>
         <nav class="nav-items">
             <a href="./pages/about.html">ABOUT ME</a>
             <a href="./pages/diary.html">DEVELOPER DIARIES</a>
@@ -40,13 +45,6 @@
         <div class="webdev">
             <p>WEB DEVELOPER  +  CODER</p>
         </div>
-
-        <!-- OR: -->
-        <!-- <div class="signature">
-            <p>Naomi Mowbray</p>
-        <p class="webdev">
-            WEB DEVELOPER + CODER</p>
-        </div> -->
 
         <div class="socials">
             <a href="https://www.instagram.com/captainaomi" target="_blank">
