added pictures to meet me

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naomi Mowbray</title>
+
+    <!-- styling -->
     <link rel="stylesheet" href="./styling/pages/home.css"/>
 
     <!-- favicon -->
@@ -15,7 +17,6 @@
     <!-- social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/c667789241.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             <a href="./index.html">Naomi Mowbray</a>
         </h1>
         <nav class="nav-items">
-            <a href="./pages/about.html">ABOUT ME</a>
+            <a href="./pages/meet.html">MEET ME</a>
             <a href="./pages/diary.html">DEVELOPER DIARIES</a>
             <a href="./pages/enquiry.html">ENQUIRE HERE</a>
         </nav>
