schmicked styling, conquered meet me and enquiry pages

--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -32,6 +32,9 @@
     </header>
 
     <main>
+        <h2 class="please"> Please, get in touch:
+        </h2>
+
         <form>
             <div class="form-elements">
                 <label>Name:</label>
@@ -50,16 +53,22 @@
 
             <div class="form-elements">
                 <label>Message:</label>
-                <textarea 
-                    rows="3" 
-                    class="form-input form-textarea">
-                    </textarea>
+                <textarea class="form-message"></textarea>
             </div>
 
-            <div class="btn-div">
-                <button id="submit">Let's Go!</button>
+            <div>
+                <button class="submit">Let's be friends!</button>
             </div>
         </form>
+
+        <div class="info">
+            <h2>
+                and, here's my contact info:
+            </h2>
+            <div class="number">
+                <p>Phone: 0402 561 982</p>
+                <p >Email: naomimowbray@live.com</p>
+            </div>
         </div>
     </main>
 
