dairies nailed and starting blog page

--- a/pages/blogs/gender.html
+++ b/pages/blogs/gender.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naomi Mowbray</title>
+    <title>The Gender Gap</title>
 
     <!-- styling -->
-    <link rel="stylesheet" href="./styling/pages/home.css"/>
+    <link rel="stylesheet" href=".../styling/pages/blogs/gender.css"/>
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href=".../images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href=".../images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href=".../images/favicon/favicon-16x16.png">
 
     <!-- social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,32 +22,17 @@
 <body>
     <header>
         <h1 class="name">
-            <a href="./index.html">Naomi Mowbray</a>
+            <a href="/index.html">Naomi Mowbray</a>
         </h1>
         <nav class="nav-items">
-            <a href="./pages/meet.html">MEET ME</a>
-            <a href="./pages/diary.html">DEVELOPER DIARIES</a>
-            <a href="./pages/enquiry.html">ENQUIRE HERE</a>
+            <a href="../meet.html">MEET ME</a>
+            <a href="../diary.html">DEVELOPER DIARIES</a>
+            <a href="../enquiry.html">ENQUIRE HERE</a>
         </nav>
     </header>
 
     <main>
-        <div class="tagline">
-            <h2>Hi, I'm Naomi!</h2>
-
-            <p>I've recently jumped into the world of web dev. and coding, and am stoked to be one of the few ladies in STEM. </p>
-            <div>
-                <button class="meet-btn">
-                    <a href="./pages/meet.html">Want a little more of my story?</a>
-                </button>
-            </div>
-        </div>
-
-        <div class="cafe-pic">
-            <img src="./images/cafe.jpg"/>
-         
-        </div>
-
+        <div>this is a blog page</div>
     </main>
 
     <footer>
