--- a/pages/diary.html
+++ b/pages/diary.html
@@ -32,11 +32,81 @@
     </header>
 
     <main>
-        <div>
-            <p>this is my blog page </p>
-            <br>
-            <br>
-        </div>
+        <article>
+            <section>
+                <img 
+                    class="cat-pic" 
+                    src="../images/cat-coolcat.jpg"
+                    alt="funky cat with pink glasses"
+                />
+            </section>
+            <section>
+                <h2>Girls: Don't Let the Gender Gap in IT Frighten You Off</h3>
+                    <p>8th March, 2023</p>
+            </section>
+        </article>
+       
+        <article>
+            <section>
+                <img 
+                    class="cat-pic" 
+                    src="../images/cat-grumpy.jpg"
+                    alt="angry cat"
+                />
+            </section>
+            <section>
+                <h2>When Your Code Just Doesn't Want to Play Nice</h3>
+                    <p>1st March, 2023 </p>
+            </section>
+        </article>
+
+        <article>
+            <section>
+                <img 
+                    class="cat-pic" 
+                    src="../images/cat-relaxing.jpg"
+                    alt="tired fat cat sleeping"
+                />
+            </section>
+            <section>
+                <h2>10 Tips to Avoid an All-Too-Common Burnout</h3>
+                    <p>22nd February, 2023 </p>
+            </section>
+        </article>
+
+        <article>
+            <section>
+                <img 
+                    class="cat-pic" 
+                    src="../images/cat-together.jpg"
+                    alt="group of kittens"
+                />
+            </section>
+            <section>
+                <h2>Why Working Together Really Does Work</h3>
+                    <p>14th February, 2023 </p>
+            </section>
+        </article>
+
+        <article>
+            <section>
+                <img 
+                    class="cat-pic" 
+                    src="../images/cat-computer.jpeg"
+                    alt="cat at a computer"
+                />
+            </section>
+            <section>
+                <h2>Are Semantics Leaving You in Feeling Frantic?</h3>
+                    <p>31st January, 2023 </p>
+            </section>
+        </article>
+
+
+
+
+
+
     </main>
 
     <footer>
