--- a/pages/meet.html
+++ b/pages/meet.html
@@ -34,9 +34,7 @@
 
     <main>
         <div class="history">
-            <h2>
-                Hello, it's nice to meet you (via my portfolio)! 
-            </h2>
+            <h2>Hello, it's nice to meet you (via my portfolio)!</h2>
 
             <p>As the header and footer say: I'm Naomi Mowbray, and I've recently joined the ranks of all the web developers and coders who came before me.</p>
 
