--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -61,13 +61,16 @@
             </div>
         </form>
 
-        <div class="info">
-            <h2>
-                and, here's my contact info:
-            </h2>
-            <div class="number">
-                <p>Phone: 0402 561 982</p>
-                <p >Email: naomimowbray@live.com</p>
+        <div class="contact-section">
+            <div>
+                <h2 class="contact-words">and, here's my contact info:
+                </h2>
+            </div>
+            <div class="contact-info">
+                <p>PHONE:</p>
+                <p>04022 561 982</p>
+                <p>EMAIL:</p> 
+                <p>naomimowbray@live.com</p>
             </div>
         </div>
     </main>
