blog pages complete

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -32,52 +32,60 @@
     </header>
 
     <main>
+
+        <!-- blog post 1 (with picture, title, date and link)-->
         <article>
+            <a href="./blog-gender.html">
             <section>
                 <img 
-                    class="cat-pic" 
                     src="../images/cat-coolcat.jpg"
                     alt="funky cat with pink glasses"
-                />
+                    />
             </section>
             <section>
                 <h2>Girls: Don't Let the Gender Gap in IT Frighten You Off</h3>
                     <p>8th March, 2023</p>
             </section>
+            </a>
         </article>
        
+        <!-- blog post 2 (with picture, title, date and link)-->
         <article>
+            <a href="./blog-code.html">
             <section>
-                <img 
-                    class="cat-pic" 
+                <img
                     src="../images/cat-grumpy.jpg"
-                    alt="angry cat"
+                    alt="grumpy cat in grass"
                 />
             </section>
             <section>
                 <h2>When Your Code Just Doesn't Want to Play Nice</h3>
                     <p>1st March, 2023 </p>
             </section>
+            </a>
         </article>
 
+        <!-- blog post 3 (with picture, title, date and link)-->
         <article>
+            <a href="./blog-burnout.html">
             <section>
                 <img 
-                    class="cat-pic" 
                     src="../images/cat-relaxing.jpg"
-                    alt="tired fat cat sleeping"
+                    alt="stretchy cat on blue bed"
                 />
             </section>
             <section>
                 <h2>10 Tips to Avoid an All-Too-Common Burnout</h3>
                     <p>22nd February, 2023 </p>
             </section>
+            </a>
         </article>
 
+        <!-- blog post 4 (with picture, title, date and link)-->
         <article>
+            <a href="./blog-together.html">
             <section>
                 <img 
-                    class="cat-pic" 
                     src="../images/cat-together.jpg"
                     alt="group of kittens"
                 />
@@ -86,26 +94,24 @@
                 <h2>Why Working Together Really Does Work</h3>
                     <p>14th February, 2023 </p>
             </section>
+            </a>
         </article>
 
+        <!-- blog post 5 (with picture, title, date and link)-->
         <article>
+            <a href="./blog-semantics.html">
             <section>
                 <img 
-                    class="cat-pic" 
-                    src="../images/cat-computer.jpeg"
+                    src="../images/cat-computer.jpg"
                     alt="cat at a computer"
                 />
             </section>
             <section>
-                <h2>Are Semantics Leaving You in Feeling Frantic?</h3>
+                <h2>Are Semantics Leaving You Feeling Kinda Frantic?</h3>
                     <p>31st January, 2023 </p>
             </section>
+            </a>
         </article>
-
-
-
-
-
 
     </main>
 
