--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -42,21 +42,21 @@
             </div>
 
             <div class="form-elements">
+                <label>Phone:</label>
+                <input class="form-input">
+            </div>
+
+            <div class="form-elements">
                 <label>Email:</label>
                 <input class="form-input">
             </div>
 
             <div class="form-elements">
-                <label>Subject:</label>
-                <input class="form-input">
-            </div>
-
-            <div class="form-elements">
-                <label>Message:</label>
+                <label>Message / Question:</label>
                 <textarea class="form-message"></textarea>
             </div>
 
-            <div>
+            <div class="submit-btn">
                 <button class="submit">Let's be friends!</button>
             </div>
         </form>
