added more buttons

--- a/pages/meet.html
+++ b/pages/meet.html
@@ -33,7 +33,7 @@
     </header>
 
     <main>
-        <div class="history">
+        <div class="bio">
             <h2>Hello, it's nice to meet you (via my portfolio)!</h2>
 
             <p>As the header and footer say: I'm Naomi Mowbray, and I've recently joined the ranks of all the web developers and coders who came before me.</p>
@@ -72,17 +72,23 @@
             alt="Puzzle Nerd"/>
         </div>
 
-        <div class="right-time">
+        <div class="bio">
             <p>And, if all that's not enough, I also like puzzles. That picture above is me and my precious 6000 piece puzzle that I hung onto for EIGHT YEARS until I felt the time was right to give it a crack. 
             </p>
             <p>Well, that 'right time' was the beginning of 2023, which is coincidentally when I began my adventure with Coder Academy into a more useful (and professional) sort of puzzling.</p>
-        </div>
-
-        <div class="bio">
+   
             <p>
                 hi
             </p>
         </div>
+
+        <!-- button -->
+        <div>
+            <button class="stories-btn">
+                <a href="./diary.html">and because I like storytelling...</a>
+            </button>
+        </div>
+        
     </main>
 
     <footer>
