--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="tagline">
             <h2>Hi, I'm Naomi!</h2>
 
-            <p>I've recently jumped into the world of web dev. and coding, and am stoked to be one of the few ladies in STEM. </p>
+            <p>I've recently jumped into the world of web dev. and coding, and am stoked to be one of the growing number of ladies in STEM. </p>
             <div>
                 <button class="meet-btn">
                     <a href="./pages/meet.html">Want a little more of my story?</a>
