added resume and comments on html pages

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -33,7 +33,7 @@
 
     <main>
 
-        <!-- blog post 1 (with picture, title, date and link)-->
+        <!-- blog post #5 (with picture, title, date and link)-->
         <article>
             <a href="./blog-gender.html">
             <section>
@@ -49,7 +49,7 @@
             </a>
         </article>
        
-        <!-- blog post 2 (with picture, title, date and link)-->
+        <!-- blog post #4 (with picture, title, date and link)-->
         <article>
             <a href="./blog-code.html">
             <section>
@@ -65,7 +65,7 @@
             </a>
         </article>
 
-        <!-- blog post 3 (with picture, title, date and link)-->
+        <!-- blog post #3 (with picture, title, date and link)-->
         <article>
             <a href="./blog-burnout.html">
             <section>
@@ -81,7 +81,7 @@
             </a>
         </article>
 
-        <!-- blog post 4 (with picture, title, date and link)-->
+        <!-- blog post #2 (with picture, title, date and link)-->
         <article>
             <a href="./blog-together.html">
             <section>
@@ -97,7 +97,7 @@
             </a>
         </article>
 
-        <!-- blog post 5 (with picture, title, date and link)-->
+        <!-- blog post #1 (with picture, title, date and link)-->
         <article>
             <a href="./blog-semantics.html">
             <section>
@@ -123,6 +123,7 @@
             <p>WEB DEVELOPER  +  CODER</p>
         </div>
 
+        <!-- social icons/outside links -->
         <div class="socials">
             <a href="https://www.instagram.com/captainaomi" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
