--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -32,6 +32,8 @@
     </header>
 
     <main>
+        
+        <!-- contact form -->
         <h2 class="please"> Please, get in touch:
         </h2>
 
@@ -61,14 +63,16 @@
             </div>
         </form>
 
+        <!-- my contact details -->
         <div class="contact-section">
             <div>
                 <h2 class="contact-words">and, here's my contact info:
                 </h2>
             </div>
+            
             <div class="contact-info">
                 <p>PHONE:</p>
-                <p>04022 561 982</p>
+                <p>0402 561 982</p>
                 <p>EMAIL:</p> 
                 <p>naomimowbray@live.com</p>
             </div>
@@ -83,6 +87,7 @@
             <p>WEB DEVELOPER  +  CODER</p>
         </div>
 
+        <!-- social icons/outside links -->
         <div class="socials">
             <a href="https://www.instagram.com/captainaomi" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
