--- a/pages/meet.html
+++ b/pages/meet.html
@@ -33,6 +33,7 @@
     </header>
 
     <main>
+        <!-- text about me -->
         <div class="bio">
             <h2>Hello, it's nice to meet you (via my portfolio)!</h2>
 
@@ -53,10 +54,19 @@
             <p>As The Facebook became more prevalent, that knowledge of how to tweak front end code became redundant, and it's taken me another seventeen years to revisit those memories and see myself completely dive in with a Diploma of IT in Web Development and Coding - way more than one little Myspace page!</p>
         </div>
 
+        <!-- bigger text about me -->
         <div class="pilot-title">
             <h2>I'm also a Commercial Helicopter Pilot, an ambassador for female pilots with Aviatrix Australia, and a registered wedding celebrant to boot.</h2>
         </div>
+        
+        <!-- button -->
+        <div class="resume">
+            <button class="resume-btn">
+                <a href="../images/naomimowbrayresume.pdf" target="_blank">You can read my whole CV here</a>
+            </button>
+        </div>
 
+        <!-- pictures of me -->
         <div class="pictures">
             <img
                 class="heli"
@@ -67,11 +77,12 @@
                 src="../images/wedding.jpg"
                 alt="Wedding Celebrant"/>
             <img
-            class="puzzle"
-            src="../images/puzzle.jpg"
-            alt="Puzzle Nerd"/>
+                class="puzzle"
+                src="../images/puzzle.jpg"
+                alt="Puzzle Nerd"/>
         </div>
 
+        <!-- more text about me -->
         <div class="bio">
             <p>And, if all that's not enough, I also like puzzles. That picture above is me and my precious 6000 piece puzzle that I hung onto for EIGHT YEARS until I felt the time was right to give it a crack. 
             </p>
@@ -99,6 +110,7 @@
             <p>WEB DEVELOPER  +  CODER</p>
         </div>
 
+        <!-- social icons/outside links -->
         <div class="socials">
             <a href="https://www.instagram.com/captainaomi" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
