finished site tweaks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <p>I've recently jumped into the world of web dev. and coding, and am stoked to be one of the growing number of ladies in STEM. </p>
 
-            <!-- button -->
+            <!-- button through to meet me page-->
             <div>
                 <button class="meet-btn">
                     <a href="./pages/meet.html">Want a little more of my story?</a>
