--- a/pages/blog-gender.html
+++ b/pages/blog-gender.html
@@ -49,19 +49,19 @@
 
         <p>Inspect anything brought into the house  behind the couch chew ipad power cord  shake treat  hopped up on goofballs hunt anything that moves chase. </p>
 
-         <p>See owner, run in terror bawl under human beds purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table yet get scared by doggo also cucumerro meow for food, then when human fills food dish, take a few bites of food and continue meowing or scratch leg; meow for can opener to feed me i like big cats and i can not lie. White cat sleeps on a black shirt haha you hold me hooman i scratch yet this is the day i shall purr myself to sleep and eat and than sleep on your face for while happily ignoring when being called and car rides are evil. Paw at beetle and eat it before it gets away. </p>
+        <p>See owner, run in terror bawl under human beds purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table yet get scared by doggo also cucumerro meow for food, then when human fills food dish, take a few bites of food and continue meowing or scratch leg; meow for can opener to feed me i like big cats and i can not lie. White cat sleeps on a black shirt haha you hold me hooman i scratch yet this is the day i shall purr myself to sleep and eat and than sleep on your face for while happily ignoring when being called and car rides are evil. Paw at beetle and eat it before it gets away. </p>
 
         <p> Hunt anything that moves need to chase tail lick butt swat at dog why must they do that behind the couch,  attack feet  claw drapes  rub face on everything bag stretch hopped up on goofballs, give attitude flop over shake treat  destroy couch. </p> 
 
         <p>Chase mice chase imaginary bugs need to chase tail attack feet chew ipad power cord   rub face on everything lick butt give attitude, hide when guests come over swat at dog  claw drapes hopped up on goofballs bag stretch , flop over why must they do that shake treat  destroy couch intently stare lls attack feet need to chase tail inspect anything brought into the house why must they do that behind the couch shake treat  lick butt  rub face on everything give attitude.</p>
-   
+        </div>
+
         <div>
             <button class="enquiry-btn">
                 <a href="./enquiry.html">Any questions you want my thoughts on?
                 </a>
             </button>
         </div>    
-
     </main>
 
     <footer>
