--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -38,11 +38,11 @@
     </header>
 
     <main>
-        
-        <!-- contact form -->
+        <!-- heading -->
         <h2 class="please"> Please, get in touch:
         </h2>
 
+        <!-- contact form -->
         <form>
             <div class="form-elements">
                 <label>Name:</label>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="submit-btn">
-                <button class="submit">Let's be friends!</button>
+                <button class="btn-text">Let's be friends!</button>
             </div>
         </form>
 
