Added Accessibility blog post, began reorganising file structure

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -39,6 +39,22 @@
 
     <main>
 
+        <!-- blog post: accessibility (with picture, title, date and link)-->
+        <article>
+            <a href="./blogs/accessibility.html">
+            <section>
+                <img 
+                    src="../images/blog/one-eyed-cat.jpg"
+                    alt="funky cat with pink glasses"
+                    />
+            </section>
+            <section>
+                <h2>My Uncomfortable Truth About Accessibility</h3>
+                    <p>5th April, 2024</p>
+            </section>
+            </a>
+        </article>
+
         <!-- blog post #5 (with picture, title, date and link)-->
         <article>
             <a href="./blog-gender.html">
