Realised most of CSS is *not* DRY, so cleaning up

--- a/pages/meet.html
+++ b/pages/meet.html
@@ -58,14 +58,8 @@
 
             <p>And with that, I also get the privilege of setting an example to other females who have yet to take the plunge into tech. The gender disparity in the industry, is no secret, but it's also not one that should scare any ladies off.</p>
 
-            <p>Coder Academy was pretty intense, but it left me as a wiz coder across:</p>
+            <p>Coder Academy was pretty intense, but it left me as a wiz coder across different languages, frameworks, databases and software.</p>
 
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Python</li>
-                <li>JavaScript</li>
-            </ul>
         </div>
 
         <!-- bigger text about me -->
@@ -100,13 +94,13 @@
             <p>Again, I know you're not necessarily here for my complete autobiography, so here's a snapshot of some of the best/juiciest parts:
             </p>
 
-            <p>I joined the Royal Australian Navy at eighteen, and then I was in one of the top performing network marking teams for a pyramid scheme shortly after. There was a period where I taught toddlers how to swim and I hosted trivia on Wednesday nights afterward at the local pub. I even had a season working as a council parking inspector - while living in a van to save up for the Pacific Crest Trail. </p>
+            <p>I joined the Royal Australian Navy at eighteen, and shortly after completing my Defence Force Gap Year, I was in one of Australia's top performing network marking teams. There was a period where I taught toddlers how to swim and I hosted trivia on Wednesday nights afterward at the local pub. I even had a season working as a council parking inspector - while living in a van to save up so I could hike the Pacific Crest Trail. </p>
 
             <p>As for seeing the world, I've volunteered in Uganda, Morooco, Belize, and India. I've visited Disneyland in three continents - it really is one of the happiest places on earth! - and I even went to the Paris and California parks by myself just because I love it so much!</p>
 
             <p>The hardest adventure I've had was hiking the Kokoda Track in Papua New Guinea, the most blisters I've ever had from hiking was the Camino de Santiago across Spain, and the most life changing and simply best hike EVER was my 4,200km trek from Mexico to Canada.</p>
         
-            <p>And, if all that's not enough, my partner and I have adopted two cats, in my 'spare time' I crochet, and I also like puzzles. That picture up above is me with my precious 6000 piece world map puzzle that I hung onto for EIGHT YEARS until I felt the time was right to give it a crack. That 'right time' was the beginning of this year, which is coincidentally when I began my adventure with Coder Academy into a more useful (and professional) sort of puzzling.</p>
+            <p>And, if all that's not enough, my partner and I have adopted two cats, in my 'spare time' I crochet, and I also like puzzles. That picture up above is me with my precious 6000 piece world map puzzle that I had sitting in a closet unopened for EIGHT YEARS until I felt the time was right to give it a crack. That 'right time' was the beginning of 2023, which is coincidentally when I began my adventure with Coder Academy into a more useful (and professional) sort of puzzling.</p>
    
             <p>Like I said, it's super nice to meet you. </p>
 
