Corrected blog layout

--- a/pages/blog-together.html
+++ b/pages/blog-together.html
@@ -55,8 +55,7 @@
 
         <p>Chase mice chase imaginary bugs need to chase tail attack feet chew ipad power cord   rub face on everything lick butt give attitude, hide when guests come over swat at dog  claw drapes hopped up on goofballs bag stretch , flop over why must they do that shake treat  destroy couch intently stare lls attack feet need to chase tail inspect anything brought into the house why must they do that behind the couch shake treat  lick butt  rub face on everything give attitude.</p>
         
-
-        <div>
+        <div class="button">
             <button class="enquiry-btn">
                 <a href="./enquiry.html">Any questions you want my thoughts on?
                 </a>
