--- a/pages/blogs/accessibility.html
+++ b/pages/blogs/accessibility.html
@@ -71,7 +71,7 @@
 
         <p>As well as making websites more accessible along the way, of course 😉</p> 
         
-        <div>
+        <div class="button">
             <button class="enquiry-btn">
                 <a href="../enquiry.html">Any questions you want my thoughts on?
                 </a>
