--- a/pages/blog-gender.html
+++ b/pages/blog-gender.html
@@ -54,9 +54,8 @@
         <p> Hunt anything that moves need to chase tail lick butt swat at dog why must they do that behind the couch,  attack feet  claw drapes  rub face on everything bag stretch hopped up on goofballs, give attitude flop over shake treat  destroy couch. </p> 
 
         <p>Chase mice chase imaginary bugs need to chase tail attack feet chew ipad power cord   rub face on everything lick butt give attitude, hide when guests come over swat at dog  claw drapes hopped up on goofballs bag stretch , flop over why must they do that shake treat  destroy couch intently stare lls attack feet need to chase tail inspect anything brought into the house why must they do that behind the couch shake treat  lick butt  rub face on everything give attitude.</p>
-        </div>
 
-        <div>
+        <div class="button">
             <button class="enquiry-btn">
                 <a href="./enquiry.html">Any questions you want my thoughts on?
                 </a>
