gumboots blog post

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -39,6 +39,22 @@
 
     <main>
 
+        <!-- blog post: gumboots (with picture, title, date and link)-->
+        <article>
+            <a href="./blogs/gumboots.html">
+            <section>
+                <img 
+                    src="../images/blog/gumboots.png"
+                    alt="grey kitten in yellow gumboots"
+                    />
+            </section>
+            <section>
+                <h2>Webflow Woes: Code Shouldn't Need Gumboots?!</h3>
+                    <p>16th May, 2024</p>
+            </section>
+            </a>
+        </article>
+
         <!-- blog post: accessibility (with picture, title, date and link)-->
         <article>
             <a href="./blogs/accessibility.html">
