--- a/pages/meet.html
+++ b/pages/meet.html
@@ -96,7 +96,7 @@
 
             <p>I joined the Royal Australian Navy at eighteen, and shortly after completing my Defence Force Gap Year, I was in one of Australia's top performing network marking teams. There was a period where I taught toddlers how to swim and I hosted trivia on Wednesday nights afterward at the local pub. I even had a season working as a council parking inspector - while living in a van to save up so I could hike the Pacific Crest Trail. </p>
 
-            <p>As for seeing the world, I've volunteered in Uganda, Morooco, Belize, and India. I've visited Disneyland in three continents - it really is one of the happiest places on earth! - and I even went to the Paris and California parks by myself just because I love it so much!</p>
+            <p>As for seeing the world, I've volunteered in Uganda, Morocco, Belize, and India. I've visited Disneyland in three continents - it really is one of the happiest places on earth! - and I even went to the Paris and California parks by myself just because I love it so much!</p>
 
             <p>The hardest adventure I've had was hiking the Kokoda Track in Papua New Guinea, the most blisters I've ever had from hiking was the Camino de Santiago across Spain, and the most life changing and simply best hike EVER was my 4,200km trek from Mexico to Canada.</p>
         
