--- a/pages/blogs/blog-gender.html
+++ b/pages/blogs/blog-gender.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avoiding Burnout</title>
+    <title>The Gender Gap</title>
 
     <!-- styling -->
-    <link rel="stylesheet" href="../styling/pages/blog.css"/>
+    <link rel="stylesheet" href="../../styling/pages/blog.css"/>
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../images/favicon/favicon-16x16.png">
 
     <!-- social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,21 +28,21 @@
 <body>
     <header>
         <h1 class="name">
-            <a href="../index.html">Naomi Mowbray</a>
+            <a href="../../index.html">Naomi Mowbray</a>
         </h1>
         <nav class="nav-items">
-            <a href="./diary.html">BACK TO THE DEVELOPER DIARIES</a>
+            <a href="../diary.html">BACK TO THE DEVELOPER DIARIES</a>
         </nav>
     </header>
 
     <main>
         <img 
-            src="../images/cat-relaxing.jpg"
-            alt="stretchy cat in blue bed"/> 
+            src="../../images/cat-coolcat.jpg"
+            alt="funky cat with pink glasses"/> 
         
         <div class="blog-title">
-            <h2>10 Tips to Avoid an All-Too-Common Burnout</h2>
-            <p class="date">22nd February, 2023</p>
+            <h2>Girls: Don't Let the Gender Gap in IT Frighten You Off</h2>
+            <p class="date">8th March, 2023</p>
         </div>
 
         <p>Pet right here, no not there, here, no fool, right here that other cat smells funny you should really give me all the treats because i smell the best and omg you finally got the right spot and i love you right now purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table for if it smells like fish eat as much as you wish but attack curtains toy mouse squeak roll over.  </p>
@@ -57,11 +57,10 @@
 
         <div class="button">
             <button class="enquiry-btn">
-                <a href="./enquiry.html">Any questions you want my thoughts on?
+                <a href="../enquiry.html">Any questions you want my thoughts on?
                 </a>
             </button>
         </div>    
-
     </main>
 
     <footer>
@@ -77,8 +76,6 @@
                 <i class="fa-brands fa-instagram"></i>
             <a href="https://www.github.com/captainaomi" target="_blank">
                     <i class="fa-brands fa-github"></i>
-            <a href="https://twitter.com/captainaomi" target="_blank">
-                <i class="fa-brands fa-twitter"></i>
             <a href="https://www.linkedin.com/in/naomi-mowbray-581a67a0" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
     </footer>
