Corrected card links for blog posts

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -73,7 +73,7 @@
 
         <!-- blog post #5 (with picture, title, date and link)-->
         <article>
-            <a href="./blog-gender.html">
+            <a href="./blogs/blog-gender.html">
             <section>
                 <img 
                     src="../images/cat-coolcat.jpg"
@@ -89,7 +89,7 @@
        
         <!-- blog post #4 (with picture, title, date and link)-->
         <article>
-            <a href="./blog-code.html">
+            <a href="./blogs/blog-code.html">
             <section>
                 <img
                     src="../images/cat-grumpy.jpg"
@@ -105,7 +105,7 @@
 
         <!-- blog post #3 (with picture, title, date and link)-->
         <article>
-            <a href="./blog-burnout.html">
+            <a href="./blogs/blog-burnout.html">
             <section>
                 <img 
                     src="../images/cat-relaxing.jpg"
@@ -121,7 +121,7 @@
 
         <!-- blog post #2 (with picture, title, date and link)-->
         <article>
-            <a href="./blog-together.html">
+            <a href="./blogs/blog-together.html">
             <section>
                 <img 
                     src="../images/cat-together.jpg"
@@ -137,7 +137,7 @@
 
         <!-- blog post #1 (with picture, title, date and link)-->
         <article>
-            <a href="./blog-semantics.html">
+            <a href="./blogs/blog-semantics.html">
             <section>
                 <img 
                     src="../images/cat-computer.jpg"
