--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -21,7 +21,7 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Quicksand:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Raleway::ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
 </head>
 
