Completely redesigned header, footer and colour scheme

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 
 <body>
     <header>
-        <h1 class="name">
-            <a href="./index.html">Naomi Mowbray</a>
-        </h1>
+        <div class="heading-logo">
+            <a href="./index.html">
+                <img src="./images/branding/nm-black.png"/>
+            </a>
+        </div>
         <nav class="nav-items">
             <a href="./pages/meet.html">MEET ME</a>
             <a href="./pages/diary.html">DEVELOPER DIARIES</a>
@@ -53,16 +55,15 @@
 
         <div class="cafe-pic">
             <img src="./images/cafe.jpg"/>
-         
         </div>
     </main>
 
     <footer>
         <div class="signature">
-            Naomi Mowbray
+            <img src="./images/branding/nm-white.png"/>
         </div>
         <div class="webdev">
-            <p>WEB DEVELOPER  +  CODER</p>
+            <p>WEB DESIGN + DEVELOPMENT</p>
         </div>
 
         <!-- social icons/outside links -->
