Updated all headers and footers

--- a/pages/blogs/blog-burnout.html
+++ b/pages/blogs/blog-burnout.html
@@ -27,9 +27,11 @@
 
 <body>
     <header>
-        <h1 class="name">
-            <a href="../../index.html">Naomi Mowbray</a>
-        </h1>
+        <div class="heading-logo">
+            <a href="./index.html">
+                <img src="../../images/branding/nm-black.png"/>
+            </a>
+        </div>
         <nav class="nav-items">
             <a href="../diary.html">BACK TO THE DEVELOPER DIARIES</a>
         </nav>
@@ -66,10 +68,10 @@
 
     <footer>
         <div class="signature">
-            Naomi Mowbray
+            <img src="../../images/branding/nm-white.png"/>
         </div>
         <div class="webdev">
-            <p>WEB DEVELOPER  +  CODER</p>
+            <p>WEB DESIGN + DEVELOPMENT</p>
         </div>
 
         <div class="socials">
