--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="nav-items">
             <a href="./pages/meet.html">MEET ME</a>
             <a href="./pages/diary.html">DEVELOPER DIARIES</a>
-            <a href="./pages/enquiry.html">ENQUIRE HERE</a>
+            <a href="./pages/enquiry.html">REACH OUT</a>
         </nav>
     </header>
 
