--- a/pages/meet.html
+++ b/pages/meet.html
@@ -27,13 +27,15 @@
 
 <body>
     <header>
-        <h1 class="name">
-            <a href="../index.html">Naomi Mowbray</a>
-        </h1>
+        <div class="heading-logo">
+            <a href="./index.html">
+                <img src="../images/branding/nm-black.png"/>
+            </a>
+        </div>
         <nav class="nav-items">
-            <a href="./meet.html">MEET ME</a>
-            <a href="./diary.html">DEVELOPER DIARIES</a>
-            <a href="./enquiry.html">ENQUIRE HERE</a>
+            <a href="./pages/meet.html">MEET ME</a>
+            <a href="./pages/diary.html">DEVELOPER DIARIES</a>
+            <a href="./pages/enquiry.html">REACH OUT</a>
         </nav>
     </header>
 
@@ -120,10 +122,10 @@
 
     <footer>
         <div class="signature">
-            Naomi Mowbray
+            <img src="../images/branding/nm-white.png"/>
         </div>
         <div class="webdev">
-            <p>WEB DEVELOPER  +  CODER</p>
+            <p>WEB DESIGN + DEVELOPMENT</p>
         </div>
 
         <!-- social icons/outside links -->
