redesigned blog pages and theme colours

--- a/pages/blogs/gumboots.html
+++ b/pages/blogs/gumboots.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="heading-logo">
-            <a href="./index.html">
+            <a href="../../index.html">
                 <img src="../../images/branding/nm-black.png"/>
             </a>
         </div>
@@ -38,7 +38,8 @@
     </header>
 
     <main>
-        <img 
+        <div class="container">
+            <img 
             src="../../images/blog/gumboots.png"
             alt="Small grey fluffy kitten in yellow gumboots with a yellow background"/> 
 
@@ -139,7 +140,7 @@
                 </a>
             </button>
         </div>    
-
+    </div>
     </main>
 
     <footer>
