--- a/pages/meet.html
+++ b/pages/meet.html
@@ -28,14 +28,14 @@
 <body>
     <header>
         <div class="heading-logo">
-            <a href="./index.html">
+            <a href="../index.html">
                 <img src="../images/branding/nm-black.png"/>
             </a>
         </div>
         <nav class="nav-items">
-            <a href="./pages/meet.html">MEET ME</a>
-            <a href="./pages/diary.html">DEVELOPER DIARIES</a>
-            <a href="./pages/enquiry.html">REACH OUT</a>
+            <a href="./meet.html">MEET ME</a>
+            <a href="./diary.html">DEVELOPER DIARIES</a>
+            <a href="./enquiry.html">REACH OUT</a>
         </nav>
     </header>
 
