Redesigned Meet Me colours

--- a/pages/meet.html
+++ b/pages/meet.html
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <!-- text about me -->
+        <div class="container">
         <div class="bio">
             <h2>Hello, it's super nice to meet you (via my portfolio)!</h2>
 
@@ -63,6 +63,7 @@
             <p>Coder Academy was pretty intense, but it left me as a wiz coder across different languages, frameworks, databases and software.</p>
 
         </div>
+        </div>
 
         <!-- bigger text about me -->
         <div class="pilot-title">
@@ -72,7 +73,7 @@
         <!-- button to external pdf of resume-->
         <div class="resume">
             <button class="resume-btn">
-                <a href="../images/NaomiMowbrayResume.pdf" target="_blank">You can read my whole CV here!</a>
+                <a href="../images/NaomiMowbrayResume.pdf" target="_blank">You can read my whole CV here</a>
             </button>
         </div>
 
@@ -92,6 +93,8 @@
         </div>
 
         <!-- more text about me -->
+        <div class="container">
+
         <div class="bio">
             <p>Again, I know you're not necessarily here for my complete autobiography, so here's a snapshot of some of the best/juiciest parts:
             </p>
@@ -112,12 +115,12 @@
         </div>
 
         <!-- button through to developer diaries-->
-        <div>
+        <div class="stories">
             <button class="stories-btn">
                 <a href="./diary.html">and because I like storytelling...</a>
             </button>
         </div>
-        
+        </div>
     </main>
 
     <footer>
