Nearly finalised homepage

--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
     </header>
 
     <main>
-        <div class="tagline">
+        <div class="hero">
             <h2>Hi, I'm Naomi!</h2>
 
-            <p>I've recently jumped into the world of web dev. and coding, and am stoked to be one of the growing number of ladies in STEM. </p>
+            <p>I've recently jumped into the world of web development, coding, and website design.</p>
+
+            <p>It's been a wild ride already, and I'm stoked to be one of the growing number of ladies in STEM. </p>
 
             <!-- button through to meet me page-->
-            <div>
+            <div class="meet">
                 <button class="meet-btn">
                     <a href="./pages/meet.html">Want a little more of my story?</a>
                 </button>
